// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Section should render 1`] = `
<section
  className=""
>
  Section content
</section>
`;

exports[`Section should render with headline 1`] = `
<section
  className=""
>
  <h2
    className=""
  >
    Section headline
  </h2>
  Section content
</section>
`;
